# Madokawaii

./: .gitignore  CMakeLists.txt  README.md
include/Madokawaii/app/: app_config.h  chart.h  common.h  def.h  epilepsy_warning.h  line_operation.h  main_menu.h  note_hit.h  note_operation.h  res_pack.h
include/Madokawaii/platform/: audio.h  core.h  fonts.h  graphics.h  gui.h  log.h  shape.h  texture.h
src/app/: app_config.cpp  chart.cpp  ending.cpp  epilepsy_warning.cpp  hit_sound_fx.cpp  hit_visual_fx.cpp  line_renderer.cpp  line_update.cpp  main.cpp  main_menu.cpp  note_render.cpp  pec.cpp  res_pack.cpp
src/platform/raylib/: gui_window_file_dialog.h  raygui.h  raylib_android_jni.cpp  raylib_audio.cpp  raylib_common.cpp  raylib_core.cpp  raylib_core4a.cpp  raylib_entry.cpp  raylib_fonts.cpp  raylib_graphics.cpp  raylib_gui.cpp  raylib_log.cpp  raylib_texture.cpp
